--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -22,6 +22,8 @@
             </div>
         </div>
 
+        {{ include('flash/_flash.html.twig') }}
+
         <div class="row">
             <div class="col-6">
                 <div class="card">
@@ -66,6 +68,17 @@
                         <a href="https://github.com/calderacc/art11" class="btn btn-primary">
                             Fork me
                         </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        Contribute to list
+                    </div>
+                    <div class="card-body">
+                        {{ form(applicationForm) }}
                     </div>
                 </div>
             </div>
