Add english messages.

--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-12">
                 <h1>
-                    {{ title }}
+                    {{ 'frontpage.headline'|trans }}
                 </h1>
             </div>
         </div>
@@ -28,11 +28,11 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        What?
+                        {{ 'frontpage.boxes.wtf_box.headline'|trans }}
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            We provide a list of hostnames and regular expressions for websites which may not like to get links as described in Article 11 of the European Copyright Directive.
+                            {{ 'frontpage.boxes.wtf_box.text'|trans }}
                         </p>
                     </div>
                 </div>
@@ -41,15 +41,15 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        Query the list
+                        {{ 'frontpage.boxes.query_box.headline'|trans }}
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            Call <code>/api/list</code> to retrieve a list of black and whitelisted hostnames and urls.
+                            {{ 'frontpage.boxes.query_box.text'|trans|raw }}
                         </p>
 
                         <a href="{{ path('api_list') }}" class="btn btn-primary">
-                            Try it
+                            {{ 'frontpage.boxes.query_box.button.caption'|trans }}
                         </a>
                     </div>
                 </div>
@@ -58,15 +58,15 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        Fork me at GitHub
+                        {{ 'frontpage.boxes.github_box.headline'|trans }}
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            Find the repository of art11 backend and frontend at <a href="https://github.com/calderacc/art11">calderacc/art11</a>.
+                            {{ 'frontpage.boxes.github_box.text'|trans|raw }}
                         </p>
 
                         <a href="https://github.com/calderacc/art11" class="btn btn-primary">
-                            Fork me
+                            {{ 'frontpage.boxes.github_box.button.caption'|trans }}
                         </a>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        Contribute to list
+                        {{ 'frontpage.boxes.application_box.headline'|trans }}
                     </div>
                     <div class="card-body">
                         {{ form(applicationForm) }}
