--- a/templates/flash/_flash.html.twig
+++ b/templates/flash/_flash.html.twig
@@ -1,9 +1,9 @@
 {% for type, messages in app.flashes %}
     {% for message in messages %}
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-12">
                 <div class="alert alert-{{ type }}">
-                    {{ message }}
+                    {{ message|raw }}
                 </div>
             </div>
         </div>
