--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -32,7 +32,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            {{ 'frontpage.boxes.wtf_box.body'|trans }}
+                            {{ 'frontpage.boxes.wtf_box.text'|trans }}
                         </p>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            {{ 'frontpage.boxes.query_box.text'|trans }}
+                            {{ 'frontpage.boxes.query_box.text'|trans|raw }}
                         </p>
 
                         <a href="{{ path('api_list') }}" class="btn btn-primary">
@@ -62,7 +62,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            {{ 'frontpage.boxes.github_box.text'|trans }}
+                            {{ 'frontpage.boxes.github_box.text'|trans|raw }}
                         </p>
 
                         <a href="https://github.com/calderacc/art11" class="btn btn-primary">
