--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -83,8 +83,42 @@
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-12">
+                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#impress-modal">
+                    Impressum
+                </a>
+            </div>
+        </div>
     </div>
 
+    <div class="modal fade" id="impress-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                        Impressum
+                    </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Angaben nach § 5 TMG:
+                    </p>
+
+                    {% include '@MalteHuebnerImpress/impress/standard_german.html.twig' %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Schließen
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
