It is not a button.

--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -86,7 +86,7 @@
 
         <div class="row">
             <div class="col-12">
-                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#impress-modal">
+                <a href="#" data-toggle="modal" data-target="#impress-modal">
                     Impressum
                 </a>
             </div>
