--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -25,7 +25,7 @@
         {{ include('flash/_flash.html.twig') }}
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 mb-2">
                 <div class="card">
                     <div class="card-header">
                         What?
@@ -38,7 +38,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 mb-2">
                 <div class="card">
                     <div class="card-header">
                         Query the list
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 mb-2">
                 <div class="card">
                     <div class="card-header">
                         Fork me at GitHub
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-6 mb-2">
                 <div class="card">
                     <div class="card-header">
                         Contribute to list
